<resources>
    <string name="app_name">AR Application</string>
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="pass_hint">Password....</string>
    <string name="email_hint">Your Email....</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Create Account?</string>
    <string name="muscle_btn">Muscle</string>
    <string name="musclesBtn">Muscle</string>
    <string name="bonesBtn">Bone</string>
    <string name="ligamentsBtn">Ligaments</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="reg_password">Enter Password</string>
    <string name="reg_confirm_pass">Confirm Password</string>
    <string name="sendAccount">Account</string>
    <string name="accountToMenu">Menu</string>
    <string name="setup_name_hint">Your name....</string>
    <string name="setup_name_btn">Save name</string>
    <string name="setup_Name">Name</string>
    <string name="name_hint">Your name.....</string>
    <string name="setup_School">School....</string>
    <string name="setup_School_Year">Your school year (i.e. Third Year)....</string>
    <string name="setup_Button">"Save "</string>
    <string name="thumb_text">Flexor R</string>
    <string name="middle_text">P. Plates</string>
    <string name="thumb_L_text">C. Ligaments</string>
    <string name="index_B_text">I. Metacarpal</string>
    <string name="middle_B_text">M.Phalanx</string>
    <string name="thumb_B_text">P. Phalanx</string>
    <string name="index_M_text">Opp Pollicis</string>
    <string name="middle_M_text">ABD Pollis</string>
    <string name="thumb_M_text">ADD Pollis</string>
    <string name="title_textView">Anatomy Insight</string>
    <string name="guide_Btn">How To Use</string>




    <string name="text_heading">HEADING</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sagittis metus eget iaculis maximus. Vestibulum a neque ultricies, cursus dolor sed</string>
    <string name="menu_text">Select Camera View Below</string>
    <string name="menu_guide_text">App Guide</string>


</resources>



