<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:paddingBottom="15dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/whiteTransparentHalf"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/reg_confirm_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingBottom="15dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/whiteTransparentHalf"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/reg_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@android:color/white"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/reg_login_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:indeterminate="true"
        android:progressTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/whiteTransparentHalf"
        android:ems="10"
        android:hint="@string/reg_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/whiteTransparentHalf"
        android:textColorHint="@color/whiteTransparentHalf"
        app:layout_constraintBottom_toTopOf="@+id/reg_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/candal"
        android:text="@string/title_textView"
        android:textAlignment="center"
        android:textColor="@color/whiteTransparentHalf"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_progress" />


</androidx.constraintlayout.widget.ConstraintLayout>