<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context=".accountSetup">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/setup_Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/whiteTransparentHalf"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColor="@color/whiteTransparentHalf"
        android:textColorHint="@color/whiteTransparentHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <EditText
        android:id="@+id/setup_School"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/whiteTransparentHalf"
        android:ems="10"
        android:hint="@string/setup_School"
        android:inputType="textPersonName"
        android:textColor="@color/whiteTransparentHalf"
        android:textColorHint="@color/whiteTransparentHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_Name" />

    <EditText
        android:id="@+id/setup_School_Year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/whiteTransparentHalf"
        android:ems="10"
        android:hint="@string/setup_School_Year"
        android:inputType="textPersonName"
        android:textColor="@color/whiteTransparentHalf"
        android:textColorHint="@color/whiteTransparentHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_School" />

    <Button
        android:id="@+id/setup_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/setup_Button"
        android:textColor="@color/whiteTransparentHalf"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_School_Year" />


</androidx.constraintlayout.widget.ConstraintLayout>