<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginAcitivity">


    <!--
     /** Title: Android Blog App 2018 - Android Studio Firebase Tutorials - Part 2
     * Author: Akshaye JH
     * Date: 2018
     * Availability: https://www.youtube.com/watch?v=WN4Xec0bNmo&list=PLGCjwl1RrtcR4ptHvrc_PQIxDBB5MGiJA&index=2
     */
    -->

    <ImageView
        android:id="@+id/hand_icon"
        android:layout_width="78dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        android:rotation="140"
        android:src="@drawable/hand_h"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/reg_progress" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:paddingBottom="15dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/whiteTransparentHalf"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="16dp"
        android:paddingBottom="15dp"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/whiteTransparentHalf"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorAccent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/login_btn_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_confirm_password" />

    <Button
        android:id="@+id/login_reg_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@android:color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/login_reg_btn_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn"
        app:layout_constraintVertical_bias="0.638" />

    <ProgressBar
        android:id="@+id/reg_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:indeterminate="true"
        android:progressTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/candal"
        android:text="@string/title_textView"
        android:textAlignment="center"
        android:textColor="@color/whiteTransparentHalf"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reg_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_progress" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:buttonSize="icon_only"
        app:layout_constraintBottom_toTopOf="@+id/login_reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_btn"
        app:layout_constraintVertical_bias="0.443"></com.google.android.gms.common.SignInButton>
</androidx.constraintlayout.widget.ConstraintLayout>